Bug 140957 - missing i18n() in magnatuneredownloadhandler.cpp
Summary: missing i18n() in magnatuneredownloadhandler.cpp
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Internet Services (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-01-31 16:05 UTC by Sven Krohlas
Modified: 2007-01-31 20:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Krohlas 2007-01-31 16:05:14 UTC
Version:           SVN (using KDE KDE 3.5.5)
Installed from:    SuSE RPMs
Compiler:          - -
OS:                Linux

There are some i18n() missing in magnatuneredownloadhandler.cpp. Here is a patch, due to the string freeze I'm not allowed to commit it atm. ;-)

Index: src/magnatunebrowser/magnatuneredownloadhandler.cpp
===================================================================
--- src/magnatunebrowser/magnatuneredownloadhandler.cpp (Revision 628783)
+++ src/magnatunebrowser/magnatuneredownloadhandler.cpp (Arbeitskopie)
@@ -26,6 +26,7 @@

 #include "qdir.h"
 #include "qmessagebox.h"
+#include <klocale.h>



@@ -50,8 +51,8 @@
     if (previousDownloads.isEmpty()) {

         //No previously purchased trak information found. No more to do here...
-        QMessageBox::information( m_parent, "No purchases found!",
-                                  "No previous purchases has been found. Nothing to redownload...\n" );
+        QMessageBox::information( m_parent, i18n( "No purchases found!" ) ,
+                                  i18n( "No previous purchases has been found. Nothing to redownload..." ) + "\n" );
         return;
     }

@@ -122,8 +123,8 @@
     else
     {

-        QMessageBox::information( m_parent, "Could not re-download album",
-                                  "There seems to be a problem with the selected redownload info file.\n" );
+        QMessageBox::information( m_parent, i18n( "Could not re-download album" ),
+                                  i18n( "There seems to be a problem with the selected redownload info file." ) + "\n" );

     }
Comment 1 Sven Krohlas 2007-01-31 16:13:44 UTC
Updated patch, including a grammar fix:

Index: src/magnatunebrowser/magnatuneredownloadhandler.cpp
===================================================================
--- src/magnatunebrowser/magnatuneredownloadhandler.cpp (Revision 628783)
+++ src/magnatunebrowser/magnatuneredownloadhandler.cpp (Arbeitskopie)
@@ -26,6 +26,7 @@

 #include "qdir.h"
 #include "qmessagebox.h"
+#include <klocale.h>



@@ -50,8 +51,8 @@
     if (previousDownloads.isEmpty()) {

         //No previously purchased trak information found. No more to do here...
-        QMessageBox::information( m_parent, "No purchases found!",
-                                  "No previous purchases has been found. Nothing to redownload...\n" );
+        QMessageBox::information( m_parent, i18n( "No purchases found!" ) ,
+                                  i18n( "No previous purchases have been found. Nothing to redownload..." ) + "\n" );
         return;
     }

@@ -122,8 +123,8 @@
     else
     {

-        QMessageBox::information( m_parent, "Could not re-download album",
-                                  "There seems to be a problem with the selected redownload info file.\n" );
+        QMessageBox::information( m_parent, i18n( "Could not re-download album" ),
+                                  i18n( "There seems to be a problem with the selected redownload info file." ) + "\n" );

     }
Comment 2 Sven Krohlas 2007-01-31 20:52:06 UTC
SVN commit 628879 by krohlas:

Dear translators, we are really sorry: we forgot to put i18n() around
those five strings. Anyway, now there is at least a chance that some
of you might be able to translate them.

BUG: 140957
BUG: 140963
CCMAIL: kde-i18n-doc@kde.org



 M  +11 -1     magnatunebrowser.cpp  
 M  +5 -4      magnatuneredownloadhandler.cpp  


--- trunk/extragear/multimedia/amarok/src/magnatunebrowser/magnatunebrowser.cpp #628878:628879
@@ -500,7 +500,17 @@
     if (!m_polished) {
         m_polished = true;
         updateList( );
-        m_artistInfobox->openURL( KURL( locate( "data", "amarok/data/magnatune_start_page.html" ) ) );
+        m_artistInfobox->begin( KURL( locate( "data", "amarok/data/" ) ) );
+        m_artistInfobox->write( "<table align='center' border='0'><tbody align='center' valign='top'>"
+          "<tr align='center'><td><div align='center'>"
+          "<IMG src='magnatune_logo.png' width='200' height='36' align='center' border='0'>"
+          "</div></td></tr><tr><td><BR>"
+        + i18n( "Welcome to Amarok's integrated Magnatune.com store. If this is the "
+                "first time you run it, you must update the database by pressing the "
+                "'Update' button below." )
+        + "</td></tr></tbody></table>" );
+        m_artistInfobox->end();
+
     }
 
 }
--- trunk/extragear/multimedia/amarok/src/magnatunebrowser/magnatuneredownloadhandler.cpp #628878:628879
@@ -26,6 +26,7 @@
 
 #include "qdir.h"
 #include "qmessagebox.h"
+#include <klocale.h>
 
 
 
@@ -50,8 +51,8 @@
     if (previousDownloads.isEmpty()) {
 
         //No previously purchased trak information found. No more to do here...
-        QMessageBox::information( m_parent, "No purchases found!",
-                                  "No previous purchases has been found. Nothing to redownload...\n" );
+        QMessageBox::information( m_parent, i18n( "No purchases found!" ) ,
+                                  i18n( "No previous purchases has been found. Nothing to redownload..." ) + "\n" );
         return;
     }
 
@@ -122,8 +123,8 @@
     else
     {
 
-        QMessageBox::information( m_parent, "Could not re-download album",
-                                  "There seems to be a problem with the selected redownload info file.\n" );
+        QMessageBox::information( m_parent, i18n( "Could not re-download album" ),
+                                  i18n( "There seems to be a problem with the selected redownload info file." ) + "\n" );
 
     }