Dear translators, we are really sorry: we forgot to put i18n() around those five strings. Anyway, now there is at least a chance that some of you might be able to translate them.

BUG: 140957
BUG: 140963
CCMAIL: kde-i18n-doc@kde.org


svn path=/trunk/extragear/multimedia/amarok/; revision=628879