src/magnatunebrowser/magnatunebrowser.cpp
@@ -500,7 +500,17 @@ void MagnatuneBrowser::polish( )
     if (!m_polished) {
         m_polished = true;
         updateList( );
-        m_artistInfobox->openURL( KURL( locate( "data", "amarok/data/magnatune_start_page.html" ) ) );
+        m_artistInfobox->begin( KURL( locate( "data", "amarok/data/" ) ) );
+        m_artistInfobox->write( "<table align='center' border='0'><tbody align='center' valign='top'>"
+          "<tr align='center'><td><div align='center'>"
+          "<IMG src='magnatune_logo.png' width='200' height='36' align='center' border='0'>"
+          "</div></td></tr><tr><td><BR>"
+        + i18n( "Welcome to Amarok's integrated Magnatune.com store. If this is the "
+                "first time you run it, you must update the database by pressing the "
+                "'Update' button below." )
+        + "</td></tr></tbody></table>" );
+        m_artistInfobox->end();
+
     }
 
 }
